# pypi

./: .cirrus.yml  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PYTHON-3.14-UPGRADE.md  README.md  add_pkg.py  backfill_core_metadata.py  build.py  format_ini.py  make_index.py  packages.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini  upgrade_all.py  validate.py
.claude/skills/: upgrade-python.md
.claude/skills/upgrade-python/: SKILL.md
.github/workflows/: auto-merge.yml  backfill_metadata.yml  build.yml  image.yml  pre-commit.yml  test.yml
devenv/: sync.py
docker/: Dockerfile  install-pythons  requirements.in  requirements.txt
index/: index.html  packages.json
index/changelog/: page1.html  page2.html
index/simple/sentry-arroyo/: index.html
index/wheels/: sentry_arroyo-2.20.2-py3-none-any.whl
prebuild/: crc32c  librdkafka  libxmlsec1-macos  p4python-ssl  xmlsec-1-3-14-deps  xmlsec-1-3-17-deps
runbook/: deleting.md
testing/: resources.py
testing/fixtures/: dumb-pypi.json  public-pypi.json
tests/: add_pkg_test.py  build_test.py  format_ini_test.py  make_index_test.py  upgrade_all_test.py  validate_test.py
