[project]
name = "pypi"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "auditwheel>=5.1.2",
    "delocate>=0.10.4",
    "dumb-pypi>=1.15.0",
    "packaging>=21.3",
    "patchelf>=0.14.5; sys_platform == 'linux'",
    "pip>=22.1.2",
    "setuptools>=67",
    "virtualenv>=20.25.0",
    "wheel>=0.38.1",
]

[dependency-groups]
dev = [
    "covdefaults",
    "coverage",
    "mypy>=1.18.2",
    "pre-commit==4.2.0",
    "pytest",
    "re-assert",
    "ruff",
    "shellcheck-py",
]

[tool.uv]
environments = ["sys_platform == 'darwin' or sys_platform == 'linux'"]

[[tool.uv.index]]
url = "https://pypi.devinfra.sentry.io/simple"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 69
