[coverage:run]
plugins = covdefaults

[coverage:report]
fail_under = 69

[flake8]
extend-ignore = E203,E501

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[options]
package_dir =
    sentry_pypi = .
